Fixing icon alignment

--- a/src/components/command-bar/components/dialog/command-bar-dialog.module.css
+++ b/src/components/command-bar/components/dialog/command-bar-dialog.module.css
@@ -23,6 +23,7 @@
 }
 
 .icon {
+	display: flex;
 	flex-shrink: 0;
 }
 
